// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space Size should work 1`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 4px; row-gap: 4px;\\">
  <!---->
  <div class=\\"sd-space-item\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"sd-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;

exports[`Space Size should work 2`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 8px; row-gap: 8px;\\">
  <!---->
  <div class=\\"sd-space-item\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"sd-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;

exports[`Space Size should work 3`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 16px; row-gap: 16px;\\">
  <!---->
  <div class=\\"sd-space-item\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"sd-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;

exports[`Space Size should work 4`] = `
"<div class=\\"sd-space sd-space-horizontal sd-space-align-center\\" style=\\"column-gap: 24px; row-gap: 24px;\\">
  <!---->
  <div class=\\"sd-space-item\\">
    <div>aaa</div>
  </div>
  <!---->
  <div class=\\"sd-space-item\\">
    <div>bbb</div>
  </div>
</div>"
`;
